# qecs

./: .gitignore  CHANGELOG.md  README.md  cabal.project  qecs.cabal
bench/: BenchSimulations.hs  Main.hs
docs/: QueryIdea.md  th-testfile.hs
profile/: Main.hs  ProfileSimulations.hs  run.sh
src/Control/: HigherKindedData.hs
src/Data/: Bundle.hs  HList.hs
src/Data/SparseSet/: Boxed.hs  Storable.hs  Unboxed.hs
src/Qecs/: Bundle.hs  Component.hs  ComponentTracker.hs  Entity.hs  ExecutionM.hs  Query.hs  Resource.hs  Simulation.hs
src/Qecs/Compile/: BundleOperations.hs  Compile.hs  CreateQuery.hs  Environment.hs  ExtractField.hs  GetResource.hs  MyQ.hs  Optimize.hs
src/Qecs/Store/: Map.hs  SparseSet.hs  Store.hs
test/: BasicSimulation.hs  Main.hs  TestSimulations.hs
