cabal-version:      3.0
name:               qecs
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Simre1
maintainer:         simre4775@gmail.com
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common common
    ghc-options: -Wall
    default-language: GHC2021
    default-extensions:
        OverloadedStrings
        OverloadedLabels
        TemplateHaskell
        QuasiQuotes
        TypeFamilies
        LambdaCase
        DataKinds
        DuplicateRecordFields
        NoFieldSelectors
        BangPatterns

library
    import:           common
    exposed-modules:  
        Data.SparseSet.Boxed
        Data.SparseSet.Storable
        Data.SparseSet.Unboxed

        Qecs.Compile.Compile
        Qecs.Compile.CreateQuery
        Qecs.Compile.MyQ
        Qecs.Compile.Environment
        Qecs.Compile.ExtractField
        Qecs.Simulation
        Qecs.Component
        Qecs.Bundle
        Qecs.Store.Store
        Qecs.Store.Map
        Qecs.Store.SparseSet
        Qecs.Entity
        Qecs.Compile.Optimize
    build-depends:    
        base ^>=4.17.0.0,
        containers,
        vector,
        optics-core,
        template-haskell,
        transformers,
        th-lift,
        lift-type,
        deepseq
    hs-source-dirs:   src
    ghc-options: -O2

test-suite qecs-test
    import:           common
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:
        TestSimulations
    build-depends:
        base ^>=4.17.0.0,
        qecs,
        tasty,
        tasty-hunit,
        deepseq

executable qecs-bench
    import:           common
    hs-source-dirs:   bench
    main-is:          Main.hs
    other-modules:
        BenchSimulations
    build-depends:
        base ^>=4.17.0.0,
        qecs,
        gauge,
        deepseq,
        linear
    ghc-options: -O2


executable qecs-profile
    import:           common
    hs-source-dirs:   profile
    main-is:          Main.hs
    other-modules:
        ProfileSimulations
    build-depends:
        base ^>=4.17.0.0,
        qecs
    ghc-options: -O2
